--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>Angel Negron - Project 1 - About Me</title>
+		<title>Angel Negron - About Me</title>
 		<link rel="shortcut icon" href="images/favicon.ico">
 
 
