--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>Angel Negron - Project 1 - Contact</title>
+		<title>Angel Negron - Contact</title>
 		<link rel="shortcut icon" href="images/favicon.ico">
 
 
