--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>Angel Negron - Project 1</title>
+		<title>Angel Negron - General Designs</title>
 		<link rel="shortcut icon" href="images/favicon.ico">
 
 
