<article> section of illustrationl.html updated with new verbiage

--- a/illustration.html
+++ b/illustration.html
@@ -76,8 +76,8 @@
 		<!-- MAIN CONTENT SECTION -->
 		<main>
 				<article>
-					<h2>Design</h2>
-								<p>I have done design work for the entirety of my art career. I prefer the simple, flat, and modern design trend with minimal use of color, but I can deliver any style demanded by the client and job. Of course, my design abilities do not start and end with logo work and have designed posters, brochures and cards for my clients.</p>
+					<h2>Illustration</h2>
+								<p>My original love was drawing and eventually illustration as I got older.  I am fortunate enough to have been a published illustrator as I was tasked with  plenty of editorial illustrations during one of my full-time jobs.</p>
 				</article>
 				<section id="maincontainer">
 					<h2>Various Designs</h2>
