New images added to illustration.html

--- a/illustration.html
+++ b/illustration.html
@@ -83,69 +83,84 @@
 					<h2>Various Designs</h2>
 				<ul class="artwork">
 					<li>
-						<a href="images/hellokitty.png" data-lightbox="hellokitty" data-title="Hello Kitty Card Design.  Personal project. &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator ">
-	          		<img class="work" src="images/hellokitty.png" alt="hellokitty artwork"> </a>
-
+						<a href="images/accountant.jpg" data-lightbox="accountant" data-title="Accountant green hat - Editorial. &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator, Photshop ">
+	          		<img class="work" src="images/accountant.jpg" alt="accountant artwork"> </a>
 					</li>
 					<li>
-							<a href="images/aislefive1.png" data-lightbox="aislefive" data-title="AileFive Design Project.  Version 1 &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator, Photoshop ">
-								<img class="work" src="images/aislefive1.png" alt="aislefive"></a>
+							<a href="images/firemap.png" data-lightbox="townfire" data-title="Townfire illustration - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator, Photoshop ">
+								<img class="work" src="images/firemap.png" alt="townfire"></a>
 					</li>
 					<li>
-						<a href="images/alexlogo.png" data-lightbox="alexlogo" data-title="Alex Class Barber Logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/alexlogo.png" alt="alex logo"></a>
+						<a href="images/artcard.jpg" data-lightbox="oldpromocard" data-title="Personal card  &nbsp; &nbsp;|&nbsp; &nbsp; Colored pencil">
+						<img class="work" src="images/artcard.jpg" alt="art card"></a>
 					</li>
 					<li>
-						<a href="images/ccmrewards.jpg" data-lightbox="ccmrewards" data-title="CCM Rewards card &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/ccmrewards.jpg" alt="ccm rewards"></a>
+						<a href="images/bull_bull.png" data-lightbox="bullbull" data-title="Bull in China Shop - editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
+						<img class="work" src="images/bull_bull.png" alt="bullbull"></a>
 					</li>
 					<li>
-						<a href="images/cider.png" data-lightbox="cider" data-title="Apple Cider Insider logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/cider.png" alt="apple cider"></a>
+						<a href="images/carrots.jpg" data-lightbox="carrots" data-title="Carrot Sticks - editorial logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop">
+						<img class="work" src="images/carrots.jpg" alt="carrot sticks"></a>
 					</li>
 					<li>
-						<a href="images/cover.png" data-lightbox="cover" data-title="Best's Review Cover &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, InDesign">
-						<img class="work" src="images/cover.png" alt="br cover"></a>
+						<a href="images/computer.jpg" data-lightbox="computer" data-title="Old Computer &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
+						<img class="work" src="images/computer.jpg" alt="old computer"></a>
 					</li>
 					<li>
-						<a href="images/fairexchange.png" data-lightbox="fairexchange" data-title="Fair Echange Logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/fairexchange.png" alt="fair exchange"></a>
+						<a href="images/cuatro.jpg" data-lightbox="cuatro" data-title="Cuatro and Maracas - Personal &nbsp; &nbsp;|&nbsp; &nbsp; Colored Pencil">
+						<img class="work" src="images/cuatro.jpg" alt="cuatro"></a>
 					</li>
 					<li>
-						<a href="images/jci.png" data-lightbox="jci" data-title="JCI Logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/jci.png" alt="jci"></a>
+						<a href="images/disability.jpg" data-lightbox="disability" data-title="Disability Logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
+						<img class="work" src="images/disability.jpg" alt="disability"></a>
 					</li>
 					<li>
-						<a href="images/lostcolonies.png" data-lightbox="lostcolonies" data-title="Lost Colonies article &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, InDesign">
-						<img class="work" src="images/lostcolonies.png" alt="lost colonies"></a>
+						<a href="images/football.jpg" data-lightbox="lostcolonies" data-title="Football helmets - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, Illustrator">
+						<img class="work" src="images/football.jpg" alt="football helmets"></a>
 					</li>
 					<li>
-						<a href="images/lostcolonies2.png" data-lightbox="lostcolonies" data-title="Lost Colonies article &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, InDesign">
-						<img class="work" src="images/lostcolonies2.png" alt="lost colonies 2"></a>
+						<a href="images/fourart.jpg" data-lightbox="foursquares" data-title="Four Squares - Editorial article &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop">
+						<img class="work" src="images/fourart.jpg" alt="four squares"></a>
 					</li>
 					<li>
-						<a href="images/sizematters.png" data-lightbox="sizematters" data-title="Size matters, article.  Best's Review &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, Illustrator, InDesign">
-						<img class="work" src="images/sizematters.png" alt="readytoroll"></a>
+						<a href="images/hospitalshop.jpg" data-lightbox="hostpitalshop" data-title="Hostpital shopping - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, Illustrator">
+						<img class="work" src="images/hospitalshop.jpg" alt="hospitalshop"></a>
 					</li>
 					<li>
-						<a href="images/msnomas.png" data-lightbox="msnomas" data-title="MS No Mas team logo &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/msnomas.png" alt="msnomas"></a>
+						<a href="images/houselighting.jpg" data-lightbox="houselighting" data-title="Lighting hitting house - Editorial Illustration &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop">
+						<img class="work" src="images/houselighting.jpg" alt="houselighting"></a>
 					</li>
 					<li>
-						<a href="images/pjjlogo.png" data-lightbox="pjjlogo" data-title="PJJ school logo (former) &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
-						<img class="work" src="images/pjjlogo.png" alt="pjjlogo"></a>
+						<a href="images/injuryclock.jpg" data-lightbox="injuryclock" data-title="The Injury Clock - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
+						<img class="work" src="images/injuryclock.jpg" alt="injuryclock"></a>
 					</li>
 					<li>
-						<a href="images/savedate.png" data-lightbox="vanessadate" data-title="Save the Date, JC & Vanessa &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, Illustrator, InDesign">
-						<img class="work" src="images/savedate.png" alt="savethedate"></a>
+						<a href="images/pam.png" data-lightbox="pam" data-title="Pam - Personal &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
+						<img class="work" src="images/pam.png" alt="pam"></a>
 					</li>
 					<li>
-						<a href="images/readytoroll2.png" data-lightbox="readytoroll" data-title="Battle of The Blues, article.  Best's Review &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, Illustrator, InDesign">
-						<img class="work" src="images/readytoroll2.png" alt="battleblues"></a>
+						<a href="images/snake.png" data-lightbox="snake" data-title="Snake - Stipple  Best's Review &nbsp; &nbsp;|&nbsp; &nbsp; Snake, Stipple. ">
+						<img class="work" src="images/snake.png" alt="snake"></a>
 					</li>
 					<li>
-						<a href="images/readytoroll.png" data-lightbox="readytoroll" data-title="Battle of The Blues, article.  Best's Review &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop, Illustrator, InDesign">
-						<img class="work" src="images/readytoroll.png" alt="readytoroll"></a>
+						<a href="images/theft.jpg" data-lightbox="theft" data-title="Identity Theft - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop">
+						<img class="work" src="images/theft.jpg" alt="theft"></a>
+					</li>
+          <li>
+						<a href="images/injuryclock.jpg" data-lightbox="injuryclock" data-title="The Injury Clock - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Illustrator">
+						<img class="work" src="images/injuryclock.jpg" alt="injuryclock"></a>
+					</li>
+					<li>
+						<a href="images/wind1.jpg" data-lightbox="windsun" data-title="The wind and the sun - Personal &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop">
+						<img class="work" src="images/wind1.jpg" alt="pam"></a>
+					</li>
+					<li>
+						<a href="images/wind2.jpg" data-lightbox="sunandwind" data-title="Snake - Stipple  Best's Review &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop ">
+						<img class="work" src="images/wind2.jpg" alt="snake"></a>
+					</li>
+					<li>
+						<a href="images/wind3.jpg" data-lightbox="sunandwind2" data-title="Identity Theft - Editorial &nbsp; &nbsp;|&nbsp; &nbsp; Adobe Photoshop">
+						<img class="work" src="images/wind3.jpg" alt="theft"></a>
 					</li>
 				</ul>
 			</section>
