Added smoothscroll javascript file and code to index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
 		<!-- lightbox if needed -->
 			<link href="lightbox/src/css/lightbox.css" rel="stylesheet" />
+
 		<!--Slick if needed -->
 			<link rel="stylesheet" href="slick/slick/slick.css"/>
+
 		<!-- Normal CSS styles -->
 		<link type="text/css" rel="stylesheet" href="styles.css" />
 
@@ -65,14 +67,8 @@
 			<button class="hamburger">&#9776;</button>
 	  	<button class="cross">&#735;</button>
 
-
-
-
-
-
-
-
 		</header>
+
 
 		<!-- MAIN CONTENT SECTION -->
 		<main>
@@ -158,10 +154,20 @@
 			<a href="https://www.linkedin.com/in/angel-negron-1637a189"> <img src="images/linkein.png" alt="LinkedIn icon"> </a>
 			<p>All work is the property of Angel Negron unless otherwise noted. © Angel Negron 2020</p>
 		</footer>
+
 		<!--hamburger script -->
 		<script src="js/javascript.js">	</script>
+
 		<!--lightbox -->
 		<script src="lightbox/src/js/lightbox.js"></script>
+
+		<!--Smooth Scroll JS https://codepen.io/cferdinandi/pen/wQzrdM   and https://github.com/cferdinandi/smooth-scroll#getting-started -->
+		<script src="js/smooth-scroll.polyfills.min.js"></script>
+
+		<script>
+		 		var scroll = new SmoothScroll('a[href*="#"]');
+		</script> 
+
 
 	</body>
 
