JS Smooth Scroll code added to illustration.html

--- a/illustration.html
+++ b/illustration.html
@@ -177,6 +177,13 @@
 		<!--lightbox -->
 		<script src="lightbox/src/js/lightbox.js"></script>
 
+		<!--Smooth Scroll JS https://codepen.io/cferdinandi/pen/wQzrdM   and https://github.com/cferdinandi/smooth-scroll#getting-started -->
+		<script src="js/smooth-scroll.polyfills.min.js"></script>
+
+		<script>
+				var scroll = new SmoothScroll('a[href*="#"]');
+		</script> 
+
 	</body>
 
 </html>
