Edits suggestions from Project 1 incorporated

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 	<body>
 		<!-- HEADER SECTION -->
 		<header>
-			<img class="thelogo" src="images/angellogo.png" alt="Angel Negron Logo" >
+			<a href="index.html">	<img class="thelogo" src="images/angellogo.png" alt="Angel Negron Logo" ></a>
 
 
 
@@ -75,11 +75,12 @@
 				Contact me if you like what you see of my work....or even if you don't :).
 				</p>
 			</article>
-			<figure class="aboutimage">
-					 <img  src="images/snow.jpg" alt="Snow Ride" title="Snow Ride" />
-					 <figcaption> <p>I also love to sled with my baby </figcaption>
-			</figure>
-
+			<aside>
+						<figure class="aboutimage">
+					 		<img  src="images/snow.jpg" alt="Snow Ride" title="Snow Ride" />
+					 		<figcaption> <p>I also love to sled with my baby </figcaption>
+						</figure>
+			</aside>
 			<div class=edmisc>
 			<article class="about-ed">
 				<h3>Education</h3>
@@ -104,13 +105,13 @@
 					</p>
 				</article>
 				<article class="about-misc">
-				<h3>Miscellanesous</h3>
+				<h3>Miscellaneous</h3>
 				<p>
 					Brazilian Jiujitsu – Black Belt, 2<sup>nd</sup> Degree (Professor) <br>
 						<br>
 						Judo – Black Belt 1<sup>st</sup> Dan <br>
 						<br>
-						Videogame collector and connoissseur.  (Seriously, I most likely have a bigger collection than anyone you know)
+						Videogame collector and connoisseur.  (Seriously, I most likely have a bigger collection than anyone you know)
 						<br>
 						<br>
 						I really, reallly love fishing.  Anytime, Anywhere.
