--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	<body>
 		<!-- HEADER SECTION -->
 		<header>
-			<img class="thelogo" src="images/angellogo.png" alt="Angel Negron Logo" >
+		<a href="index.html">	<img class="thelogo" src="images/angellogo.png" alt="Angel Negron Logo" ></a>
 
 
 
@@ -81,7 +81,7 @@
 
       <!--Form Area-->
 
-          <aside class="formcontactsection">
+          <section class="formcontactsection">
             <h3> Contact Form </h3>
             <form class="mainform" action="form.php" method="post" onsubmit="return validateForm(this)">
                 <label for="firstname" class="formtext"> First Name</label>
@@ -104,7 +104,7 @@
                   <input class="buttons" type="submit" name="submit" value="Submit!" />
                   <input class="buttons" type="reset" value="Reset Form" />
 								</form>
-          </aside>
+          </section>
 
 		<!-- FOOTER AND ITS CONTENT SECTION -->
 		<footer>
