--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<body>
 		<!-- HEADER SECTION -->
 		<header>
-			<img class="thelogo" src="images/angellogo.png" alt="Angel Negron Logo" >
+			<a href="index.html">	<img class="thelogo" src="images/angellogo.png" alt="Angel Negron Logo" ></a>
 
 
 
@@ -166,7 +166,7 @@
 
 		<script>
 		 		var scroll = new SmoothScroll('a[href*="#"]');
-		</script> 
+		</script>
 
 
 	</body>
